Shared library fixed. Next step is to preserve directory structure.

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(fuzzylite)
 
 set(CMAKE_CXX_FLAGS "-g -Wall")
+OPTION(USE_SINGLE_PRECISION "Use double precision"	OFF)
 
 include_directories(.)
 
@@ -11,6 +12,26 @@ file(STRINGS FL_SOURCES fl-sources)
 
 string(REGEX REPLACE "\n" " " ${fl-headers} ${fl-headers})
 string(REGEX REPLACE "\n" " " ${fl-sources} ${fl-sources})
+
+# Always full RPATH from http://www.cmake.org/Wiki/CMake_RPATH_handling
+# use, i.e. don't skip the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH  FALSE)
+
+# when building, don't use the install RPATH already
+# (but later on when installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+
+# add the automatically determined parts of the RPATH
+# which point to directories outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+# the RPATH to be used when installing, but only if it's not a system directory
+list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
+if("${isSystemDir}" STREQUAL "-1")
+   SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+endif("${isSystemDir}" STREQUAL "-1")
 
 
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
@@ -29,6 +50,4 @@ install(TARGETS fl-bin RUNTIME DESTINATION bin)
 install(TARGETS fl-shared DESTINATION lib)
 install(TARGETS fl-static DESTINATION lib)
 install(FILES ${fl-headers} DESTINATION include/fl)
-
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
