Changes to cmake scripts. Still work to do

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 2.8)
 
 project(fuzzylite)
 
-set(CMAKE_CXX_FLAGS "-g -Wall")
-OPTION(USE_SINGLE_PRECISION "Use double precision"	OFF)
+set(CMAKE_VERBOSE_MAKEFILE true)
+set(CMAKE_CXX_FLAGS "-g -Wall -DFL_NO_LOG")
+option(USE_SINGLE_PRECISION "Use single precision"	OFF)
 
 include_directories(.)
 
@@ -33,6 +34,7 @@ if("${isSystemDir}" STREQUAL "-1")
    SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 endif("${isSystemDir}" STREQUAL "-1")
 
+#add_definitions(-DFL_USE_SINGLE_PRECISION)
 
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
 set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
@@ -43,11 +45,15 @@ set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite)
 
 add_executable(fl-bin src/main.cpp)
 set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite)
+set_target_properties(fl-bin PROPERTIES COMPILE_FLAGS -DFL_DEBUG=true)
 target_link_libraries(fl-bin fl-shared)
 
 
-install(TARGETS fl-bin RUNTIME DESTINATION bin)
-install(TARGETS fl-shared DESTINATION lib)
-install(TARGETS fl-static DESTINATION lib)
-install(FILES ${fl-headers} DESTINATION include/fl)
+install(TARGETS fl-bin fl-shared fl-static
+		RUNTIME DESTINATION bin
+		LIBRARY DESTINATION lib
+		ARCHIVE DESTINATION Lib)
+
+install(DIRECTORY fl/ DESTINATION include/fl)
+
 
