Adjustments for cross-platform

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -10,12 +10,20 @@ option(FL_PRECISION "Precision to differentiate numbers" 1e-5)
 option(FL_DECIMALS "Number of decimals to print information" 3)
 
 
-#set(CMAKE_VERBOSE_MAKEFILE true)
+set(CMAKE_VERBOSE_MAKEFILE true)
 
-#set(CMAKE_CXX_FLAGS "/Werror /g2 /O0")
-#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
-#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
-add_definitions(-DFL_WINDOWS)
+set(FL_LIBS)
+
+if(UNIX)
+    add_definitions(-DFL_UNIX)
+    set(CMAKE_CXX_FLAGS "-Werror")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g2 -O0")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+    
+elseif(WIN32)
+    add_definitions(-DFL_WINDOWS)
+    set(FL_LIBS dbghelp)
+endif(UNIX)
 
 
 if(FL_USE_FLOAT)
@@ -71,15 +79,16 @@ endif("${isSystemDir}" STREQUAL "-1")
 
 add_library(fl-shared SHARED ${fl-headers} ${fl-sources})
 set_target_properties(fl-shared PROPERTIES OUTPUT_NAME fuzzylite)
-target_link_libraries(fl-shared dbghelp)
+target_link_libraries(fl-shared ${FL_LIBS})
+
 
 add_library(fl-static STATIC ${fl-headers} ${fl-sources})
 set_target_properties(fl-static PROPERTIES OUTPUT_NAME fuzzylite-static)
-target_link_libraries(fl-static dbghelp)
+target_link_libraries(fl-static ${FL_LIBS})
 
 add_executable(fl-bin src/main.cpp)
 set_target_properties(fl-bin PROPERTIES OUTPUT_NAME fuzzylite-demo)
-target_link_libraries(fl-bin fl-shared dbghelp)
+target_link_libraries(fl-bin fl-shared ${FL_LIBS})
 
 
 install(TARGETS fl-bin fl-shared #fl-static
