--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -17,7 +17,7 @@ set(FL_LIBS)
 if(UNIX)
     add_definitions(-DFL_UNIX)
     set(CMAKE_CXX_FLAGS "-Werror")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DFL_DEBUG")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
     set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
     
