FL_BUILD_PATH defined to output FL_LOG. config.h renamed back to definitions.h. Includes of definitions.h added to the main headers

--- a/fuzzylite/CMakeLists.txt
+++ b/fuzzylite/CMakeLists.txt
@@ -12,6 +12,8 @@ option(FL_DECIMALS "Number of decimals to print information" 3)
 
 set(CMAKE_VERBOSE_MAKEFILE true)
 
+add_definitions(-DFL_BUILD_PATH="${CMAKE_SOURCE_DIR}") #used to determine FL__FILE__
+
 set(FL_LIBS)
 
 if(UNIX)
